--- a/ScienceFair/index.html
+++ b/ScienceFair/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Environment - Ecology & Sustainability</title>
+    <title>Eco World - Ecologia & Sustentabilidade</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,8 +12,8 @@
     <div class="top-bar">
         <div class="container top-bar-content">
             <div class="contact-info">
-                <span><i class="fas fa-phone-alt"></i> Call Us Anytime: (+55) 62 98181-8250</span>
-                <span><i class="fas fa-envelope"></i> Email Us Anytime: kevinmatos2006@gmail.com</span>
+                <span><i class="fas fa-phone-alt"></i> Ligue-nos: (+55) 62 98181-8250</span>
+                <span><i class="fas fa-envelope"></i> Email: kevinmatos2006@gmail.com</span>
             </div>
             <div class="top-social-links">
                 <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -32,17 +32,17 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#home" class="active">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#home" class="active">Menu</a></li>
+                    <li><a href="#about">Sobre nós</a></li>
+                    <li><a href="#services">Serviços</a></li>
                     <li><a href="#blog">Blog</a></li>
                     <li><a href="#shop">Shop</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#contact">Contate-nos</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
                 <a href="#search-modal" class="search-icon" aria-label="Search"><i class="fas fa-search"></i></a>
-                <a href="#contact" class="free-consultation-btn">Free Consultation</a>
+                <a href="#contact" class="free-consultation-btn">Livre consulta</a>
             </div>
         </div>
     </header>
@@ -51,8 +51,8 @@
         <section id="home" class="hero-section">
             <div class="container hero-content">
                 <div class="hero-text">
-                    <h2>Go Green Today,<br>Save The World Tomorrow!</h2>
-                    <a href="#about" class="read-more-btn">Read More</a>
+                    <h2>Vamos green hoje,<br>Salve o Mundo amanhã!</h2>
+                    <a href="#about" class="read-more-btn">Leia mais</a>
                 </div>
                 <div class="slider-arrow left" aria-label="Previous Slide"><i class="fas fa-chevron-left"></i></div>
                 <div class="slider-arrow right" aria-label="Next Slide"><i class="fas fa-chevron-right"></i></div>
@@ -65,21 +65,21 @@
                     <div class="card-icon">
                         <i class="fas fa-leaf"></i>
                     </div>
-                    <h3>Save Tree to Save Money</h3>
+                    <h3>Salve árvores para salvar dinheiro</h3>
                     <p>Consectetur adipiscing elitdo eiusmod tempor incididunt ut labore.</p>
                 </div>
                 <div class="feature-card highlighted-card">
                     <div class="card-icon">
                         <i class="fas fa-lightbulb"></i>
                     </div>
-                    <h3>Think Clean and Go Green</h3>
+                    <h3>Pense limpo e vamos Green</h3>
                     <p>Consectetur adipiscing elitdo eiusmod tempor incididunt ut labore.</p>
                 </div>
                 <div class="feature-card">
                     <div class="card-icon">
                         <i class="fas fa-recycle"></i>
                     </div>
-                    <h3>Save The Planet By Recycling</h3>
+                    <h3>Salve o planeta reciclando</h3>
                     <p>Consectetur adipiscing elitdo eiusmod tempor incididunt ut labore.</p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
 
         <section id="about" class="content-section placeholder-section">
             <div class="container">
-                <h2>About Us</h2>
+                <h2>Sobre nós</h2>
                 <p>This is where information about your organization and its mission would go. You can expand on your values, history, and goals here.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
@@ -95,7 +95,7 @@
 
         <section id="services" class="content-section placeholder-section">
             <div class="container">
-                <h2>Our Services</h2>
+                <h2>Nossos serviços</h2>
                 <p>Outline the various services you offer, such as waste management consulting, educational programs, sustainability workshops, or eco-friendly product sourcing.</p>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
@@ -107,7 +107,7 @@
                     <img src="images/snowdrop.jpg" alt="Snowdrop Flowers" class="content-image">
                 </div>
                 <div class="text-column">
-                    <h2>Reduce, Reuse, Recycle</h2>
+                    <h2>Reduza, Reuse, Recicle</h2>
                     <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo.</p>
                     <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
                     <a href="#services" class="read-more-btn green-btn">Read More</a> </div>
@@ -116,7 +116,7 @@
 
         <section id="blog" class="content-section placeholder-section">
             <div class="container">
-                <h2>Our Blog</h2>
+                <h2>Nosso Blog</h2>
                 <p>Share your latest articles, news, and insights on environmental issues, sustainable practices, and community initiatives here.</p>
                 <p>Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris.</p>
             </div>
@@ -132,7 +132,7 @@
 
         <section id="contact" class="content-section placeholder-section">
             <div class="container">
-                <h2>Contact Us</h2>
+                <h2>Contact-nos</h2>
                 <p>Provide ways for visitors to get in touch, such as a contact form (requires JavaScript), email address, phone number, and physical address.</p>
                 <p>Feel free to reach out via email: <a href="kevinmatos2006@gmail.com">kevinmatos2006@gmail.com</a> or call us at (+55) 62 9 8181-8250.</p>
             </div>
