--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Environment - Ecology & Sustainability</title>
+    <title>Eco World - Ecologia & Sustentabilidade</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,8 +12,8 @@
     <div class="top-bar">
         <div class="container top-bar-content">
             <div class="contact-info">
-                <span><i class="fas fa-phone-alt"></i> Call Us Anytime: (+55) 62 98181-8250</span>
-                <span><i class="fas fa-envelope"></i> Email Us Anytime: kevinmatos2006@gmail.com</span>
+                <span><i class="fas fa-phone-alt"></i> Ligue-nos: (+55) 62 98181-8250</span>
+                <span><i class="fas fa-envelope"></i> Email: kevinmatos2006@gmail.com</span>
             </div>
             <div class="top-social-links">
                 <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -28,21 +28,21 @@
     <header>
         <div class="container main-header-content">
             <div class="logo">
-                <img src="https://via.placeholder.com/24x24/6BB05E/ffffff?text=🌿" alt="Green Environment Logo"> Green Environment
+                <h2>Eco World</h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#home" class="active">Home</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#home" class="active">Início</a></li>
+                    <li><a href="#about">Sobre Nós</a></li>
+                    <li><a href="#services">Serviços</a></li>
                     <li><a href="#blog">Blog</a></li>
-                    <li><a href="#shop">Shop</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="#shop">Loja</a></li>
+                    <li><a href="#contact">Contato</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
-                <a href="#search-modal" class="search-icon" aria-label="Search"><i class="fas fa-search"></i></a>
-                <a href="#contact" class="free-consultation-btn">Free Consultation</a>
+                <a href="#search-modal" class="search-icon" aria-label="Buscar"><i class="fas fa-search"></i></a>
+                <a href="#contact" class="free-consultation-btn">Consulta Grátis</a>
             </div>
         </div>
     </header>
@@ -51,11 +51,9 @@
         <section id="home" class="hero-section">
             <div class="container hero-content">
                 <div class="hero-text">
-                    <h2>Go Green Today,<br>Save The World Tomorrow!</h2>
-                    <a href="#about" class="read-more-btn">Read More</a>
+                    <h2>Vamos ser verdes hoje,<br>Salve o mundo amanhã!</h2>
+                    <a href="#about" class="read-more-btn">Leia Mais</a>
                 </div>
-                <div class="slider-arrow left" aria-label="Previous Slide"><i class="fas fa-chevron-left"></i></div>
-                <div class="slider-arrow right" aria-label="Next Slide"><i class="fas fa-chevron-right"></i></div>
             </div>
         </section>
 
@@ -65,94 +63,167 @@
                     <div class="card-icon">
                         <i class="fas fa-leaf"></i>
                     </div>
-                    <h3>Save Tree to Save Money</h3>
-                    <p>Consectetur adipiscing elitdo eiusmod tempor incididunt ut labore.</p>
+                    <h3>Economize árvores para economizar dinheiro</h3>
+                    <p>Aprenda como a sustentabilidade pode beneficiar seu bolso e o planeta. Pequenas ações, grandes impactos!</p>
                 </div>
                 <div class="feature-card highlighted-card">
                     <div class="card-icon">
                         <i class="fas fa-lightbulb"></i>
                     </div>
-                    <h3>Think Clean and Go Green</h3>
-                    <p>Consectetur adipiscing elitdo eiusmod tempor incididunt ut labore.</p>
+                    <h3>Pense limpo e seja verde</h3>
+                    <p>Adote um estilo de vida mais consciente. Descubra soluções inovadoras para um futuro mais limpo.</p>
                 </div>
                 <div class="feature-card">
                     <div class="card-icon">
                         <i class="fas fa-recycle"></i>
                     </div>
-                    <h3>Save The Planet By Recycling</h3>
-                    <p>Consectetur adipiscing elitdo eiusmod tempor incididunt ut labore.</p>
+                    <h3>Salve o planeta reciclando</h3>
+                    <p>Transforme lixo em recursos valiosos. Reciclar é um ato de amor pelo nosso lar, a Terra.</p>
                 </div>
             </div>
         </section>
 
         <section id="about" class="content-section placeholder-section">
             <div class="container">
-                <h2>About Us</h2>
-                <p>This is where information about your organization and its mission would go. You can expand on your values, history, and goals here.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2>Sobre Nós</h2>
+                <p>Na Eco World, somos apaixonados por construir um futuro mais verde e sustentável. Nossa missão é educar e inspirar indivíduos e comunidades a adotar práticas ecológicas. Acreditamos que cada pequena ação conta e que juntos podemos fazer uma grande diferença para o nosso planeta. Desde 2010, temos trabalhado incansavelmente para promover a consciência ambiental e oferecer soluções práticas para os desafios ecológicos.</p>
+                <p>Nossa equipe é composta por especialistas dedicados em ecologia, conservação e desenvolvimento sustentável. Estamos comprometidos em fornecer informações precisas e recursos úteis para ajudar você a viver de forma mais sustentável. Junte-se a nós nesta jornada para proteger e preservar a beleza natural do nosso mundo para as futuras gerações.</p>
             </div>
         </section>
 
         <section id="services" class="content-section placeholder-section">
             <div class="container">
-                <h2>Our Services</h2>
-                <p>Outline the various services you offer, such as waste management consulting, educational programs, sustainability workshops, or eco-friendly product sourcing.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h2>Nossos Serviços</h2>
+                <p>Oferecemos uma gama completa de serviços para apoiar sua jornada rumo à sustentabilidade. Isso inclui consultoria em gestão de resíduos para empresas, programas educacionais envolventes para escolas, workshops práticos sobre práticas sustentáveis e orientação na aquisição de produtos ecologicamente corretos. Nosso objetivo é tornar a sustentabilidade acessível e fácil para todos, seja você um indivíduo, uma empresa ou uma comunidade.</p>
+                <p>Seja na implementação de novas políticas de reciclagem, na organização de eventos de conscientização ambiental ou no desenvolvimento de estratégias para reduzir sua pegada de carbono, estamos aqui para ajudar. Nossos serviços são personalizados para atender às suas necessidades específicas, garantindo soluções eficazes e duradouras.</p>
             </div>
         </section>
         
         <section id="solutions" class="content-image-section">
             <div class="container content-wrapper">
                 <div class="image-column">
-                    <img src="images/snowdrop.jpg" alt="Snowdrop Flowers" class="content-image">
+                    <img src="images/snowdrop.jpg" alt="Flores de campânula" class="content-image">
                 </div>
                 <div class="text-column">
-                    <h2>Reduce, Reuse, Recycle</h2>
-                    <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo.</p>
-                    <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
-                    <a href="#services" class="read-more-btn green-btn">Read More</a> </div>
+                    <h2>Reduza, Reutilize, Recicle</h2>
+                    <p>Esses três pilares são a base para um estilo de vida sustentável. Reduzir o consumo, reutilizar itens sempre que possível e reciclar o que não pode ser evitado são passos cruciais para minimizar nosso impacto ambiental.</p>
+                    <p>Ao incorporar esses princípios em seu dia a dia, você contribui significativamente para a diminuição de resíduos, a conservação de recursos naturais e a proteção dos ecossistemas. Cada escolha consciente faz a diferença para o futuro do nosso planeta.</p>
+                    <a href="#services" class="read-more-btn green-btn">Saiba Mais</a> </div>
             </div>
         </section>
 
         <section id="blog" class="content-section placeholder-section">
             <div class="container">
-                <h2>Our Blog</h2>
-                <p>Share your latest articles, news, and insights on environmental issues, sustainable practices, and community initiatives here.</p>
-                <p>Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris.</p>
+                <h2>Nosso Blog</h2>
+                <p>Mantenha-se atualizado com as últimas notícias, insights e dicas sobre ecologia e sustentabilidade em nosso blog. Abordamos uma variedade de tópicos, desde as últimas inovações em energia renovável até guias práticos para um estilo de vida de baixo carbono. Nossos artigos são escritos por especialistas e entusiastas do meio ambiente, garantindo informações relevantes e inspiradoras.</p>
+                <p>Aqui você encontrará histórias de sucesso de comunidades sustentáveis, análises aprofundadas sobre desafios ambientais e conselhos práticos sobre como fazer a sua parte para um futuro mais verde. Explore nossos posts e junte-se à conversa global sobre sustentabilidade.</p>
             </div>
         </section>
 
         <section id="shop" class="content-section placeholder-section">
             <div class="container">
-                <h2>Eco-Friendly Shop</h2>
-                <p>Showcase any sustainable products, books, or merchandise you offer to help people live a greener lifestyle.</p>
-                <a href="https://www.recyclenow.com/"><li>Recycle Now!</li></a>
+                <h2>Loja Eco-Friendly</h2>
+                <p>Descubra nossa seleção cuidadosamente curada de produtos sustentáveis que o ajudarão a viver um estilo de vida mais verde. De itens reutilizáveis para o dia a dia a soluções inovadoras para o lar e presentes eco-conscientes, nossa loja oferece alternativas que respeitam o meio ambiente. Cada produto é escolhido pensando na sua durabilidade, origem ética e baixo impacto ambiental.</p>
+                <a href="https://www.recyclenow.com/" target="_blank"><li>Recicle Agora!</li></a>
+                <p>Apoie a produção responsável e faça escolhas que beneficiam tanto você quanto o planeta. Explore nossa loja e encontre os produtos perfeitos para sua jornada sustentável.</p>
             </div>
         </section>
 
         <section id="contact" class="content-section placeholder-section">
             <div class="container">
-                <h2>Contact Us</h2>
-                <p>Provide ways for visitors to get in touch, such as a contact form (requires JavaScript), email address, phone number, and physical address.</p>
-                <p>Feel free to reach out via email: <a href="kevinmatos2006@gmail.com">kevinmatos2006@gmail.com</a> or call us at (+55) 62 9 8181-8250.</p>
-            </div>
+                <h2>Contate-nos</h2>
+                <p>Tem alguma pergunta, sugestão ou gostaria de discutir uma parceria? Não hesite em nos contatar! Estamos sempre abertos a novas ideias e prontos para ajudar. Você pode nos enviar uma mensagem através do formulário abaixo (necessita de JavaScript para funcionalidade completa), ou entrar em contato diretamente. Nossa equipe está ansiosa para conversar com você e explorar como podemos trabalhar juntos por um mundo mais sustentável.</p>
+                <p>Sinta-se à vontade para entrar em contato via e-mail: <a href="mailto:kevinmatos2006@gmail.com">kevinmatos2006@gmail.com</a> ou ligue para nós em (+55) 62 9 8181-8250. Estamos localizados em Goiânia, Goiás, Brasil.</p>
+                </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Green Environment. All rights reserved.</p>
+            <p>© 2025 Eco World. Todos os direitos reservados.</p>
         </div>
     </footer>
     <div id="search-overlay" class="search-overlay">
-        <a href="#" class="close-search" aria-label="Close Search">&times;</a>
+        <a href="#" class="close-search" aria-label="Fechar Busca">×</a>
         <div class="search-overlay-content">
-            <input type="text" id="searchInput" placeholder="Search the website...">
-            <button id="searchButton" type="button"><i class="fas fa-search"></i> Search</button>
+            <input type="text" id="searchInput" placeholder="Buscar no site...">
+            <button id="searchButton" type="button"><i class="fas fa-search"></i> Buscar</button>
             <div id="searchResults" class="search-results"></div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const searchIcon = document.querySelector('.search-icon');
+            const searchOverlay = document.getElementById('search-overlay');
+            const closeSearch = document.querySelector('.close-search');
+            const searchInput = document.getElementById('searchInput');
+            const searchButton = document.getElementById('searchButton');
+            const searchResultsDiv = document.getElementById('searchResults');
+            const mainContent = document.querySelector('main');
+            const sections = mainContent.querySelectorAll('section'); // Get all sections to search within
+
+            searchIcon.addEventListener('click', function(e) {
+                e.preventDefault();
+                searchOverlay.style.display = 'flex';
+                searchInput.focus();
+            });
+
+            closeSearch.addEventListener('click', function(e) {
+                e.preventDefault();
+                searchOverlay.style.display = 'none';
+                searchInput.value = ''; // Clear input
+                searchResultsDiv.innerHTML = ''; // Clear results
+            });
+
+            searchButton.addEventListener('click', performSearch);
+            searchInput.addEventListener('keypress', function(e) {
+                if (e.key === 'Enter') {
+                    performSearch();
+                }
+            });
+
+            function performSearch() {
+                const query = searchInput.value.toLowerCase().trim();
+                searchResultsDiv.innerHTML = ''; // Clear previous results
+
+                if (query === '') {
+                    searchResultsDiv.innerHTML = '<p>Por favor, digite algo para buscar.</p>';
+                    return;
+                }
+
+                let foundResults = false;
+                sections.forEach(section => {
+                    const sectionId = section.id;
+                    const sectionTitleElement = section.querySelector('h2');
+                    const sectionTitle = sectionTitleElement ? sectionTitleElement.textContent.toLowerCase() : '';
+                    const sectionText = section.textContent.toLowerCase();
+
+                    if (sectionTitle.includes(query) || sectionText.includes(query)) {
+                        foundResults = true;
+                        const resultItem = document.createElement('div');
+                        resultItem.classList.add('search-result-item');
+                        
+                        const link = document.createElement('a');
+                        link.href = `#${sectionId}`;
+                        link.textContent = `Encontrado em: ${sectionTitleElement ? sectionTitleElement.textContent : 'Seção Sem Título'}`;
+                        link.addEventListener('click', function() {
+                            searchOverlay.style.display = 'none'; // Close overlay when a result is clicked
+                            searchInput.value = ''; // Clear input
+                            searchResultsDiv.innerHTML = ''; // Clear results
+                            // Optional: Scroll smoothly to the section
+                            document.getElementById(sectionId).scrollIntoView({ behavior: 'smooth' });
+                        });
+                        resultItem.appendChild(link);
+                        searchResultsDiv.appendChild(resultItem);
+                    }
+                });
+
+                if (!foundResults) {
+                    searchResultsDiv.innerHTML = '<p>Nenhum resultado encontrado para sua busca.</p>';
+                }
+            }
+        });
+    </script>
 </body>
 </html>
